build-log-utf8.txt

> labhour-work@0.0.0 build
> vite build

[36mvite v8.0.0 [32mbuilding client environment for production...[36m[39m
[2K
transforming...Γ£ô 2532 modules transformed.
node.exe : [31mΓ£ù[39m Build failed in 1.40s
At line:1 char:1
+ & "C:\Program Files\nodejs/node.exe" "C:\Program Files\nodejs/node_mo ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: ([31mΓ£ù[39m Build failed in 1.40s:String) [] 
   , RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
[31merror during build:
[31mBuild failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Invalid empty selector
4305 |      opacity: 0;
4306 |    }
4307 |    to {
     |  ^
4308 |      opacity: 1;
4309 |    }
    at Module.<anonymous> (C:\Users\Shaleen\Downloads\Labhour-work\Labhour-work\frontend\nod
e_modules\lightningcss\node\index.js:56:14)
    at minifyCSS (file:///C:/Users/Shaleen/Downloads/Labhour-work/Labhour-work/frontend/node
_modules/vite/dist/node/chunks/node.js:21170:59)
    at async finalizeCss (file:///C:/Users/Shaleen/Downloads/Labhour-work/Labhour-work/front
end/node_modules/vite/dist/node/chunks/node.js:21016:36)
    at async Promise.all (index 1)
    at async Object.run (file:///C:/Users/Shaleen/Downloads/Labhour-work/Labhour-work/fronte
nd/node_modules/vite/dist/node/chunks/node.js:2437:22)
    at async PluginContextImpl.renderChunk (file:///C:/Users/Shaleen/Downloads/Labhour-work/
Labhour-work/frontend/node_modules/vite/dist/node/chunks/node.js:20555:19)
    at async plugin (file:///C:/Users/Shaleen/Downloads/Labhour-work/Labhour-work/frontend/n
ode_modules/rolldown/dist/shared/bindingify-input-options-Cu7pt6SZ.mjs:1211:16)
    at async plugin.<computed> (file:///C:/Users/Shaleen/Downloads/Labhour-work/Labhour-work
/frontend/node_modules/rolldown/dist/shared/bindingify-input-options-Cu7pt6SZ.mjs:1570:12)[
31m
    at aggregateBindingErrorsIntoJsError (file:///C:/Users/Shaleen/Downloads/Labhour-work/La
bhour-work/frontend/node_modules/rolldown/dist/shared/error-CP8smW_P.mjs:48:18)
    at unwrapBindingResult (file:///C:/Users/Shaleen/Downloads/Labhour-work/Labhour-work/fro
ntend/node_modules/rolldown/dist/shared/error-CP8smW_P.mjs:18:128)
    at #build (file:///C:/Users/Shaleen/Downloads/Labhour-work/Labhour-work/frontend/node_mo
dules/rolldown/dist/shared/rolldown-build-4YnQkA76.mjs:3311:34)
    at async buildEnvironment (file:///C:/Users/Shaleen/Downloads/Labhour-work/Labhour-work/
frontend/node_modules/vite/dist/node/chunks/node.js:32794:64)
    at async Object.build (file:///C:/Users/Shaleen/Downloads/Labhour-work/Labhour-work/fron
tend/node_modules/vite/dist/node/chunks/node.js:33216:19)
    at async Object.buildApp (file:///C:/Users/Shaleen/Downloads/Labhour-work/Labhour-work/f
rontend/node_modules/vite/dist/node/chunks/node.js:33213:153)
    at async CAC.<anonymous> (file:///C:/Users/Shaleen/Downloads/Labhour-work/Labhour-work/f
rontend/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}[39m
